# test_deploy_streamlit

./: +  Dockerfile  LICENSE  README.md  conda-lock.yml  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
nginx/: default.conf
