[project]
    name = "streamlit-docker"
    version = "0.1.0"
    dependencies = [
        #"python==3.12.2",
        "streamlit",
    ]

[build-system]
    requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]


[tool.conda-lock]
    channels = [
        'conda-forge',
    ]
    platforms = [
        'linux-64',
        'noarch'
    ]


